# OpenMBIR-TEM

./: CMakeLists.txt  CmdLineREADME.txt  ComputationEngineOptimized.c  ComputationEngineOptimized.h  ComputationInputs.c  ComputationInputs.h  License.txt  Main.c  README.md  Readme.txt  Readme_v2.txt  Todo.txt
Code/: CMakeLists.txt  ComputationEngineOptimized.c  ComputationEngineOptimized.h  ComputationInputs.c  ComputationInputs.h  MyHeader.h
Code/Applications/BFReconstruction/: BFReconstructionArgsParser.cpp  BFReconstructionArgsParser.h  CMakeLists.txt  CmdLineREADME.txt  main.cpp
Code/Applications/BrightFieldGui/: BrightFieldGui.cpp  BrightFieldGui.h  CMakeLists.txt  CheckBoxDelegate.cpp  CheckBoxDelegate.h  ImageOpenDialog.cpp  MRCGraphicsView.cpp  MRCGraphicsView.h  MRCInfoWidget.cpp  QMRCDisplayWidget.cpp  QMRCDisplayWidget.h  ReconstructionArea.cpp  ReconstructionArea.h  RectangleCreator.h  TiltAngleGroupBox.cpp  TiltAngleGroupBox.h  TomogramTiltLoader.h  main.cpp
Code/Applications/HAADFGui/: CMakeLists.txt  HAADFGui.cpp  HAADFGui.h  main.cpp
Code/Applications/HAADFReconstruction/: CMakeLists.txt  CmdLineREADME.txt  HAADFReconstructionArgsParser.cpp  HAADFReconstructionArgsParser.h  main.cpp
Code/Applications/MBIRReconstruction/: CMakeLists.txt  MBIRReconstructionArgsParser.cpp  MBIRReconstructionArgsParser.h  main.cpp
Code/Applications/MRCSubset/: CMakeLists.txt  MRCSubset.cpp
Code/Applications/ScaleOffsetCorrection/: CMakeLists.txt  SOCArgsParser.cpp  SOCArgsParser.h  SOCMain.cpp
Code/Applications/TEMBIR/: CMakeLists.txt  GainsOffsetsItemDelegate.h  LayersDockWidget.cpp  MRCGraphicsView.cpp  MRCGraphicsView.h  QMRCDisplayWidget.cpp  QMRCDisplayWidget.h  ReconstructionArea.cpp  RectangleCreator.cpp  RectangleCreator.h  TEMBIRGui.cpp  TEMBIRGui.h  TiltAngleGroupBox.cpp  TiltAngleGroupBox.h  TomogramTiltLoader.cpp  main.cpp
Code/Applications/TomoGui/: CMakeLists.txt  GainsOffsetsItemDelegate.h  GainsOffsetsTableModel.cpp  GainsOffsetsTableModel.h  ImageOpenDialog.h  LayersDockWidget.cpp  LayersDockWidget.h  MRCGraphicsView.cpp  MRCGraphicsView.h  MRCInfoWidget.cpp  MRCInfoWidget.h  QMRCDisplayWidget.cpp  QMRCDisplayWidget.h  ReconstructionArea.cpp  ReconstructionArea.h  TomoEngineTask.cpp  TomoEngineTask.h  TomoGui.cpp  TomoGui.h  TomoGuiGraphicsView.cpp  TomoGuiGraphicsView.h  TomoInputWidget.cpp  TomoInputWidget.h  main.cpp
Code/Common/: SourceList.cmake  randlib.h
Code/EIMTomo/: ComputationInputs.c  ComputationInputs.h  EIMTomoLibConfiguration.h.in  Main.c  RawGeometryWriter.cpp  RawGeometryWriter.h
Code/EIMTomo/BasicReconstructionAlgorithm/: BasicReconstructionEngine.cpp  BasicReconstructionEngine.h  BasicReconstructionInputs.cpp  BasicReconstructionInputs.h  BasicReconstructionMain.cpp  BasicReconstructionStructures.h  CMakeLists.txt  ComputationEngineOptimized.c  ComputationEngineOptimized.h  ComputationInputs.c  ComputationInputs.h  Main.c
Code/EIMTomo/Common/: SourceList.cmake  randlib.h
Code/EIMTomo/IO/: MRCHeader.h  MRCReader.cpp  MRCReader.h  RawGeometryWriter.cpp  RawGeometryWriter.h  SourceList.cmake  VTKFileWriters.hpp  VTKWriterMacros.h
Code/EIMTomo/JointEstimationAlgorithm/: CMakeLists.txt  ComputationEngineMotionCorrection.c  ComputationEngineMotionCorrection.h  ComputationInputsMotionCorrection.c  ComputationInputsMotionCorrection.h  JointEstimationCLIParser.cpp  JointEstimationCLIParser.h  JointEstimationMain.c  JointEstimationMain.cpp  MotionCorrectionEngine.c  MotionCorrectionEngine.h  MotionCorrectionInputs.c  MotionCorrectionInputs.h
Code/EIMTomo/MotionCorrectionAlgorithm/: CMakeLists.txt  MotionCorrectionEngine.cpp  MotionCorrectionEngine.h  MotionCorrectionInputs.cpp  (+3 more)
Code/H5Support/: CMakeLists.txt  H5Lite.cpp  H5Lite.h  H5Utilities.cpp  H5Utilities.h
Code/HaadfMbirLib/: CMakeLists.txt  ForwardProject.cpp  ForwardProject.h  HaadfMbirEngine.cpp  HaadfMbirEngine.h  HaadfMbirEngine_Extra.cpp  HaadfMbirEngine_UpdateVoxels.cpp  HaadfMbirInputs.cpp  HaadfMbirInputs.h  HaadfMbirLibConfiguration.h.in  HaadfMbirStructures.h  MultiResolutionHaadfMbir.cpp  MultiResolutionHaadfMbir.h  QGGMRF_Functions.cpp  QGGMRF_Functions.h
Code/JointEstimationAlgorithm/: CMakeLists.txt  ComputationEngineMotionCorrection.c  ComputationEngineMotionCorrection.h  ComputationInputsMotionCorrection.c  ComputationInputsMotionCorrection.h  JointEstimationMain.c  allocate.h
Code/MBIRLib/: CMakeLists.txt  MBIRLibConfiguration.h.in
Code/MXA/: CMakeLists.txt  MXADLLExport.h
Code/NonHomogeniousICD/: CMakeLists.txt  ComputationEngineOptimizedNHICD.c  ComputationInputsNHICD.c  ComputationInputsNHICD.h  NHICDMain.c
Code/NonHomogenousICD/: CMakeLists.txt  ComputationEngineOptimizedNHICD.c  ComputationEngineOptimizedNHICD.h  ComputationInputsNHICD.c  ComputationInputsNHICD.h  randlib.h
Code/QtSupport/: ApplicationAboutBoxDialog.cpp  ApplicationAboutBoxDialog.h  CMakeLists.txt  CheckBoxDelegate.cpp  CheckBoxDelegate.h  ColorComboPicker.cpp  ColorComboPicker.h  GainsOffsetsItemDelegate.h  GainsOffsetsTableModel.cpp  GainsOffsetsTableModel.h  ImageGraphicsDelegate.cpp  ImageGraphicsDelegate.h  ImageOpenDialog.cpp  ImageOpenDialog.h  LayersDockWidget.cpp  LayersDockWidget.h  MRCGraphicsView.cpp  MRCGraphicsView.h  MRCInfoWidget.cpp  MRCInfoWidget.h  ProcessQueueController.cpp  ProcessQueueController.h  ProcessQueueDialog.cpp  ProcessQueueDialog.h  ProcessQueueTask.cpp  ProcessQueueTask.h  QAbstractPipelineWrapper.h.in  QDisclosableGroupBox.cpp  QDisclosableGroupBox.h  QFSDropLineEdit.cpp  QFSDropLineEdit.h  QFSDroppableGraphicsView.cpp  QFSDroppableGraphicsView.h  QFileCompleter.cpp  QFileCompleter.h  QFilterPipelineWrapper.h.in  QMRCDisplayWidget.cpp  QMRCDisplayWidget.h  QObserverWrapper.h.in  QProgressLabel.cpp  (+10 more)
Code/ReconstructionCoreLib/: CMakeLists.txt  ReconstructionCoreLibConfiguration.h.in
Code/Test/: CMakeLists.txt  MRCReaderTest.cpp  MRCSubset.cpp  TomoArray_Test.hpp  WrappedArrayTest.cpp
Code/TomoEngine/: CMakeLists.txt  TomoEngineConfiguration.h.in
Code/mt/: SourceList.cmake  mt19937ar.h
Code/tclap/: CmdLine.h
(+446 files in other folders)
